--- a/config/config.json
+++ b/config/config.json
@@ -8,17 +8,19 @@
     "client": null
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "cgmhakrc",
+    "password": "u73lZLQ93Wcj93Bkf8sVpNoT5GgK8CYH",
+    "database": "cgmhakrc",
+    "host": "batyr.db.elephantsql.com",
+    "dialect": "postgres",
+    "client": null
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "cgmhakrc",
+    "password": "u73lZLQ93Wcj93Bkf8sVpNoT5GgK8CYH",
+    "database": "cgmhakrc",
+    "host": "batyr.db.elephantsql.com",
+    "dialect": "postgres",
+    "client": null
   }
 }
